@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.drnu" version="1.2.0" name="DR NU Player" provider-name="InKaKiLLeR, twinther [tommy@winther.nu]">
+<addon id="plugin.video.drnu" version="1.2.1" name="DR NU Player" provider-name="InKaKiLLeR, twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
