@@ -1,3 +1,7 @@
+[B]Version 1.2.1[/B] - 2011-02-01
+- Fixed problem with favorites and recently watched when lists were empty
+- Fixed problem with remove favorite
+
 [B]Version 1.2.0[/B] - 2011-02-01
 - Added main menu with favorites and recently watched program series
 
